<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.adobepassclientlessrefapp.MainActivity">
    <item
        android:id="@+id/action_adobe_clientless"
        android:orderInCategory="100"
        android:title="@string/about_clientless"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_show_logcat"
        android:orderInCategory="100"
        android:title="@string/show_logcat"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_logcat"
        android:orderInCategory="100"
        android:title="@string/clear_logcat"
        app:showAsAction="never" />
</menu>
