<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        style="@style/Separator"
        android:id="@+id/adobe_config_form_header"
        android:layout_width="match_parent"
        android:text="@string/adobe_config_setup"
        android:textAllCaps="false"/>

    <HorizontalScrollView
        android:id="@+id/top_buttons_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/paddingLR"
        android:paddingRight="@dimen/paddingLR"
        android:layout_below="@id/adobe_config_form_header"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_adobe_config_generate"
                style="@style/ButtonStyle"
                android:text="@string/generate_sample_data"/>

            <!--<Button-->
                <!--android:id="@+id/btn_adobe_config_browse"-->
                <!--style="@style/ButtonStyle"-->
                <!--android:text="@string/browse_live_data"/>-->

            <Button
                android:id="@+id/btn_adobe_config_clear"
                style="@style/ButtonStyle"
                android:text="@string/clear_form_data"/>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/paddingLR"
        android:paddingRight="@dimen/paddingLR"
        android:layout_below="@id/top_buttons_group">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm1_baseUrl"/>

                            <EditText
                                android:id="@+id/baseurl"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm2_reggieCodePath"/>

                            <EditText
                                android:id="@+id/reggieCodePath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm3_checkAuthenticationPath"/>

                            <EditText
                                android:id="@+id/checkAuthenticationPath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm4_authnTokenTimeoutSeconds"/>

                            <EditText
                                android:id="@+id/authnTokenTimeoutSeconds"
                                style="@style/FormEditText"
                                android:hint="int"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm5_tempPassProvider"/>

                            <EditText
                                android:id="@+id/tempPassProvider"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm6_getUserMetadataPath"/>

                            <EditText
                                android:id="@+id/getUserMetadataPath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm7_authnTokenPath"/>

                            <EditText
                                android:id="@+id/authnTokenPath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm8_tempPassUrl"/>

                            <EditText
                                android:id="@+id/temppassurl"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm9_authzTokenPath"/>

                            <EditText
                                android:id="@+id/authzTokenPath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm10_authorizePath"/>

                            <EditText
                                android:id="@+id/authorizePath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm11_logoutPath"/>

                            <EditText
                                android:id="@+id/logoutPath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm12_mvpdListPath"/>

                            <EditText
                                android:id="@+id/mvpdListPath"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm13_redirectUrl"/>

                            <EditText
                                android:id="@+id/redirecturl"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm14_tokenizationUrl"/>

                            <EditText
                                android:id="@+id/tokenizationurl"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm15_logosUrl"/>

                            <EditText
                                android:id="@+id/logosurl"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm16_externalBrowserDomains"/>

                            <EditText
                                android:id="@+id/externalBrowserDomains"
                                style="@style/FormEditText"
                                android:hint="List of Strings"/>
                        </LinearLayout>

                        <LinearLayout
                            style="@style/FormEntries">
                            <TextView
                                style="@style/FormValues"
                                android:text="@string/configForm17_nbcTokenUrl"/>

                            <EditText
                                android:id="@+id/nbcTokenurl"
                                style="@style/FormEditText"/>
                        </LinearLayout>

                    </LinearLayout>
                </HorizontalScrollView>
                <LinearLayout
                    style="@style/FormEntries">
                    <TextView
                        style="@style/FormValues"
                        android:text="@string/configForm18_tempPassSelection"/>

                    <EditText
                        android:id="@+id/tempPassSelection"
                        android:hint="TempPassSelectionConfig Object"
                        style="@style/FormExpandText"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <Button
                        android:id="@+id/btn_adobe_config_ok"
                        style="@style/ButtonStyle"
                        android:text="SAVE"/>

                    <Button
                        android:id="@+id/btn_adobe_config_back"
                        style="@style/ButtonStyle"
                        android:text="BACK"/>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>